syntax = "proto3";

package v1;

import weak "google/api/annotations.proto";
import "storage/deployment.proto";
import "storage/image.proto";

option go_package = "./api/v1;v1";
option java_package = "io.stackrox.proto.api.v1";

message VulnMgmtExportWorkloadsRequest {
  int32 timeout = 1;
  string query = 2;
}

// The workloads response contains the full image details including the
// vulnerability data.
message VulnMgmtExportWorkloadsResponse {
  storage.Deployment deployment = 1;
  repeated storage.Image images = 2;
}

// VulnMgmtWorkloadService APIs are used to manage workload vulnerabilities.
service VulnMgmtWorkloadService {
  rpc VulnMgmtExportWorkloads(VulnMgmtExportWorkloadsRequest) returns (stream VulnMgmtExportWorkloadsResponse) {
    option (google.api.http) = {get: "/v1/export/vuln-mgmt/workloads"};
  }
}
